--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     -->
     <script src="http://cdn.craig.is/js/mousetrap/mousetrap.min.js?9d308" type="text/javascript"></script>
     <script src="js/Console.js" type="text/javascript"></script>
-    <script src="js/syntax-checker.js" type="text/javascript"></script>
+    <!--<script src="js/syntax-checker.js" type="text/javascript"></script>-->
     <script src="js/processing.syntax-checker.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script type="text/javascript">
