--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 <body style="background-color: #fdf6e3;">
     <a class="button" onclick="new Polymerase($('#elcode').html()).checkCode(['processing']);">Check the code!</a>
-    <a class="button" onclick="alert('How ya doing?');">Continue</a><br>
+    <a class="button" onclick="printer.table([['Hello', 'Hallo', 'Hola', 'Privet'], ['Goodbye', 'Auf wiedersehen', 'Adios', 'Dasvedanya']], {});">Continue</a><br>
     <code id="elcode" class="block">
         <pre>
         /*
-        * @syntax-checker(ignore 4); This means ignore line number four
-        * @syntax-checker(ignore ~4); This means ignore the line four lines down
-        * @syntax-checker(ignore -range ~3,9); This means ignore from 3 lines below to line 9(inclusive)
-        * @syntax-checker(ignore 9,10,11,~1); This means ignore lines 9, 10 and 7
+        * @pms(ignore 4); This means ignore line number four
+        * @pms(ignore ~4); This means ignore the line four lines down
+        * @pms(ignore -range ~3,9); This means ignore from 3 lines below to line 9(inclusive)
+        * @pms(ignore 9,10,11,~1); This means ignore lines 9, 10 and 7
         */
         String       s;
         String name = "syntax-checker demo";
@@ -74,7 +74,7 @@
     -->
     <script src="http://cdn.craig.is/js/mousetrap/mousetrap.min.js?9d308" type="text/javascript"></script>
     <script src="js/Console.js" type="text/javascript"></script>
-    <!--<script src="js/syntax-checker.js" type="text/javascript"></script>-->
+    <script src="js/syntax-checker.js" type="text/javascript"></script>
     <script src="js/processing.syntax-checker.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script type="text/javascript">
