--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body style="background-color: #fdf6e3;">
     <a class="button" onclick="new Polymerase($('#elcode').html()).checkCode(['processing']);">Check the code!</a>
-    <a class="button" onclick="printer.table([['English', 'German', 'Spanish', 'Russian'], ['Hello', 'Hallo', 'Hola', 'Privet'], ['Goodbye', 'Auf wiedersehen', 'Adios', 'Dasvedanya'], ['Player', 'Spieler', 'Jugador', 'Igrakor']], {verticalRule : '<span style=\'color:black;\'>|</span>'});">Continue</a><br>
+    <a class="button" onclick="printer.table([['English', 'German', 'Spanish', 'Russian'], ['Hello', 'Hallo', 'Hola', 'Privet'], ['Goodbye', 'Auf wiedersehen', 'Adios', 'Dasvedanya'], ['Player', 'Spieler', 'Jugador', 'Igrakor']], {verticalRule : '|'});">Continue</a><br>
+    <a class="button" onclick="printer.error('Console is updated!');">Try me!</a><br>
     <code id="elcode" class="block">
         <pre>
         /*
@@ -74,8 +75,8 @@
     -->
     <script src="http://cdn.craig.is/js/mousetrap/mousetrap.min.js?9d308" type="text/javascript"></script>
     <script src="js/Console.js" type="text/javascript"></script>
-    <script src="js/syntax-checker.js" type="text/javascript"></script>
-    <script src="js/processing.syntax-checker.js" type="text/javascript"></script>
+    <script src="js/polymerase.js" type="text/javascript"></script>
+    <script src="js/processing.polymerase.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function() {
