--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color: #fdf6e3;">
-    <a class="button" onclick="new Polymerase($('#elcode').html()).checkCode(['processing']);">Check the code!</a>
+    <a class="button" onclick="new Polymerase($('#elcode').html()).checkCode('processing');">Check the code!</a>
     <a class="button" onclick="printer.table([['English', 'German', 'Spanish', 'Russian'], ['Hello', 'Hallo', 'Hola', 'Privet'], ['Goodbye', 'Auf wiedersehen', 'Adios', 'Dasvedanya'], ['Player', 'Spieler', 'Jugador', 'Igrakor']], {verticalRule : '|'});">Continue</a><br>
     <code id="elcode" class="block">
         <pre>
